2011-10-12  Kentaro Hara  <haraken@chromium.org>

        Implement a BeforeLoadEvent constructor for JSC
        https://bugs.webkit.org/show_bug.cgi?id=69893

        Reviewed by Adam Barth.

        before-load-event-constructor.html checks the behavior of the BeforeLoadEvent constructor.

        * fast/dom/constructed-objects-prototypes-expected.txt: Added inner.BeforeLoadEvent().
        * fast/events/constructors/before-load-event-constructor-expected.txt: Added.
        * fast/events/constructors/before-load-event-constructor.html: Added.
        * platform/chromium/test_expectations.txt: Skipped before-load-event-constructor.html, since V8 does not yet have the BeforeLoadEvent constructor.

2011-10-12  Ben Wells  <benwells@chromium.org>

        Incorrect rendering with one-sided thick border and border-radius
        https://bugs.webkit.org/show_bug.cgi?id=38787

        Reviewed by Simon Fraser.

        * fast/borders/border-radius-complex-inner.html: Added.
        * platform/chromium-linux/fast/borders/border-radius-complex-inner-expected.png: Added.
        * platform/chromium-linux/fast/borders/border-radius-different-width-001-expected.png:
        * platform/chromium-linux/fast/borders/mixed-border-styles-radius-expected.png:
        * platform/chromium/test_expectations.txt:
        * platform/mac/fast/borders/border-radius-complex-inner-expected.txt: Added.

2011-10-12  Dominic Mazzoni  <dmazzoni@google.com>

        Skip accessibility/menu-list-sends-change-notification.html on Mac.
        https://bugs.webkit.org/show_bug.cgi?id=69970

        Reviewed by Simon Fraser.

        * platform/mac/Skipped:

2011-10-12  Tony Chang  <tony@chromium.org>

        Implement -webkit-flex-align for cross axis alignment in flex-flow: row
        https://bugs.webkit.org/show_bug.cgi?id=69808

        Reviewed by David Hyatt.

        * css3/flexbox/flex-align-expected.txt: Added.
        * css3/flexbox/flex-align-percent-height-expected.txt: Added.