@@ -16,17 +16,17 @@
 <div>The four boxes below should look identical.</div>
 
 <div class="container">
-    <div class="box" style="-webkit-writing-mode: horizontal-tb;"></div>
+    <div class="box"></div>
 </div>
 
 <div class="container">
-    <div class="box" style="-webkit-writing-mode: horitzontal-bt;"></div>
+    <div class="box"></div>
 </div>
 
 <div class="container">
-    <div class="box" style="-webkit-writing-mode: vertical-lr;"></div>
+    <div class="box"></div>
 </div>
 
 <div class="container">
-    <div class="box" style="-webkit-writing-mode: vertical-rl;"></div>
+    <div class="box"></div>
 </div>
