@@ -1,24 +1,0 @@
-layer at (0,0) size 800x600
-  RenderView at (0,0) size 800x600
-layer at (0,0) size 800x600
-  RenderBlock {HTML} at (0,0) size 800x600
-    RenderBody {BODY} at (8,8) size 784x584
-      RenderText {#text} at (160,126) size 4x18
-        text run at (160,126) width 4: " "
-      RenderText {#text} at (324,126) size 4x18
-        text run at (324,126) width 4: " "
-      RenderText {#text} at (488,126) size 4x18
-        text run at (488,126) width 4: " "
-      RenderText {#text} at (0,0) size 0x0
-layer at (8,8) size 160x140
-  RenderBlock (relative positioned) {DIV} at (0,0) size 160x140 [bgcolor=#FFC0CB]
-    RenderBlock {DIV} at (40,10) size 100x100 [bgcolor=#808080]
-layer at (172,8) size 160x140
-  RenderBlock (relative positioned) {DIV} at (164,0) size 160x140 [bgcolor=#FFC0CB]
-    RenderBlock {DIV} at (40,10) size 100x100 [bgcolor=#808080]
-layer at (336,8) size 160x140
-  RenderBlock (relative positioned) {DIV} at (328,0) size 160x140 [bgcolor=#FFC0CB]
-    RenderBlock {DIV} at (40,10) size 100x100 [bgcolor=#808080]
-layer at (500,8) size 160x140
-  RenderBlock (relative positioned) {DIV} at (492,0) size 160x140 [bgcolor=#FFC0CB]
-    RenderBlock {DIV} at (40,10) size 100x100 [bgcolor=#808080]
