@@ -1,3 +1,15 @@
+2011-10-12  Ojan Vafai  <ojan@chromium.org>
+
+        make fast/writing-mode/margins.html a reftest to avoid cross-platform differences
+        https://bugs.webkit.org/show_bug.cgi?id=69977
+
+        Reviewed by Tony Chang.
+
+        * fast/writing-mode/margins-expected.html: Added.
+        * fast/writing-mode/margins-expected.png: Removed.
+        * fast/writing-mode/margins-expected.txt: Removed.
+        * fast/writing-mode/margins.html:
+
 2011-10-12  Kentaro Hara  <haraken@chromium.org>
 
         Implement a BeforeLoadEvent constructor for JSC
